--- a/src/main/resources/templates/fragments/secureHeader.html
+++ b/src/main/resources/templates/fragments/secureHeader.html
@@ -27,7 +27,7 @@
 						<li><a th:href="@{/publicPost}">Posts</a>
 						<li sec:authorize="isAuthenticated()"><a href="#">Staff</a>
 							<ul>
-								<li sec:authorize="isAuthenticated()"><a th:href="@{/rest/coach}">Coaches</a></li>
+								<li sec:authorize="isAuthenticated()"><a th:href="@{/rest/coach/1}">Coaches</a></li>
 								<li sec:authorize="isAuthenticated()"><a th:href="@{/rest/player}">Players</a></li>
 							</ul>
 						</li>
