--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -48,6 +48,23 @@ a{
 	background-color: #b30000;
 }
 
+.paging  {
+	padding: 20px;
+}
+.paging a {
+	background-color: #333333;
+	padding: 15px;
+	color:white;
+	border-radius: 10px;
+}
+
+.pagging-disabled {
+	background-color: #b30000;
+	padding: 15px;
+	color:white;
+	border-radius: 10px;
+}
+
 .button-group a{
 	color: #333333;
 	transition-duration: 0.4s;
@@ -113,6 +130,7 @@ a{
 .custom-table {
 	table-layout: auto;
 	width: 100%;
+	margin-bottom: 20px;
 }
 
 /* global custom table*/
