Added training page paging

--- a/src/main/resources/templates/fragments/secureHeader.html
+++ b/src/main/resources/templates/fragments/secureHeader.html
@@ -32,7 +32,7 @@
 							</ul>
 						</li>
 						<li sec:authorize="isAuthenticated()"><a th:href="@{/rest/team}">Teams</a></li>
-						<li sec:authorize="isAuthenticated()"><a th:href="@{/rest/training}">Training</a></li>
+						<li sec:authorize="isAuthenticated()"><a th:href="@{/rest/training/1}">Training</a></li>
 						<li sec:authorize="isAuthenticated()"><a th:href="@{/rest/tournament}">Tournaments</a></li>
 						<li><a th:href="@{/contacts}">Contacts</a></li>
 						<li><a th:href="@{/about}">About</a></li>
