--- a/src/main/resources/templates/training.html
+++ b/src/main/resources/templates/training.html
@@ -17,7 +17,7 @@
 			<h1>Trainings</h1>
 		</div>
 		<div class ="search-div">
-			<form th:action="@{/rest/training}">
+			<form th:action="@{/rest/training/1}">
 				<label>Search</label>
 				<input class="search-input" id="search-input" type="text" name="keyword" th:value="${keyword}" required />
 				
@@ -54,6 +54,12 @@
 					</tr>
 				</tbody>
 			</table>
+			<div class="paging">
+				<span th:each="i: ${#numbers.sequence(1, totalPages)}">
+				    <a th:if="${currentPage != i}" th:href="@{'/rest/training/' + ${i}}">[[${i}]]</a>
+				    <span class="pagging-disabled" th:unless="${currentPage != i}">[[${i}]]</span>
+				</span>
+			</div>
 		</div>
 	</div>
 	<footer>
@@ -71,7 +77,7 @@
 				<form th:action="@{/rest/training/addNew}" method="post" enctype="multipart/form-data">
 					<div class="form-div">
 						<label>Description</label>
-						<input type="text"  name="description" required pattern="[]{4,50}" 
+						<input type="text"  name="description" required pattern="{4,50}" 
 							   title="Description should be 4-50 characters">
 					</div>
 					<div class="form-div">
@@ -116,7 +122,7 @@
 					</div>
 					<div class="form-div">
 						<label>Description</label>
-						<input type="text" id="descriptionEdit"  name="description" required pattern="[]{4,50}" 
+						<input type="text" id="descriptionEdit"  name="description" required pattern="{4,50}" 
 							   title="Description should be 4-50 characters">
 					</div>
 					<div class="form-div">
