--- a/src/main/resources/templates/tournament.html
+++ b/src/main/resources/templates/tournament.html
@@ -17,7 +17,7 @@
 			<h1>Tournaments</h1>
 		</div>
 		<div class ="search-div">
-			<form th:action="@{/rest/tournament}">
+			<form th:action="@{/rest/tournament/1}">
 				<label>Search</label>
 				<input class="search-input" id="search-input" type="text" name="keyword" th:value="${keyword}" required />
 				
@@ -56,6 +56,12 @@
 					</tr>
 				</tbody>
 			</table>
+			<div class="paging">
+				<span th:each="i: ${#numbers.sequence(1, totalPages)}">
+				    <a th:if="${currentPage != i}" th:href="@{'/rest/tournament/' + ${i}}">[[${i}]]</a>
+				    <span class="pagging-disabled" th:unless="${currentPage != i}">[[${i}]]</span>
+				</span>
+			</div>
 		</div>
 	</div>
 	<footer>
@@ -78,7 +84,7 @@
 					</div>
 					<div class="form-div">
 						<label>Address</label>
-						<input type="text"  name="address" required pattern="[]{4,50}" 
+						<input type="text"  name="address" required pattern="{4,50}" 
 							   title="Adress should be 4-25 character long">
 					</div>
 					<div class="form-div">
@@ -123,7 +129,7 @@
 					</div>
 					<div class="form-div">
 						<label>Address</label>
-						<input type="text" id="addressEdit"  name="address" required pattern="[]{4,50}" 
+						<input type="text" id="addressEdit"  name="address" required pattern="{4,50}" 
 							   title="Adress should be 4-25 character long">
 					</div>
 					<div class="form-div">
