Added post page pagination

--- a/src/main/resources/templates/fragments/secureHeader.html
+++ b/src/main/resources/templates/fragments/secureHeader.html
@@ -21,7 +21,7 @@
 						<li sec:authorize="hasRole('ROLE_ADMIN')"><a href="#">Admin</a>
 							<ul>
 								<li><a th:href="@{/secure/admin/user}">Users</a></li>
-								<li><a th:href="@{/secure/admin/post}">Posts</a></li>
+								<li><a th:href="@{/secure/admin/post/1}">Posts</a></li>
 							</ul>
 						</li>
 						<li><a th:href="@{/publicPost/1}">Posts</a>
