--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -46,6 +46,7 @@ a{
 .delete{
 	color: #f4f4f4f4;
 	background-color: #b30000;
+	
 }
 
 .paging  {
@@ -767,8 +768,6 @@ footer{
 .admin-side2-div{
 	grid-column:1/3;
 	grid-row:4/4;
-	
-	
 }
 
 .admin-center2-div{
@@ -820,4 +819,34 @@ footer{
 	text-decoration: none;
 	display:flex;
 }
+
+.profile-pic {
+	background-color: #f4f4f4;
+}
+
+.profile-pic img{
+	border-radius: 50px;
+}
+
+.profile-buttons {
+	padding:10px;
+	background-color: #333333;
+	border-radius: 10px;
+}
+
+.profile-buttons a {
+	padding:5px;
+	border-right: 2px solid #f4f4f4;
+	color: #f4f4f4;
+}
+
+.profile-info-div {
+	background-color: #333333;
+	border-radius:20px;
+	color: #f4f4f4;
+	margin: 10px;
+	padding: 10px;
+}
+
+
 
