--- a/src/main/resources/templates/fragments/secureHeader.html
+++ b/src/main/resources/templates/fragments/secureHeader.html
@@ -7,12 +7,16 @@
 <body>
 	<div class="header-container" th:fragment="secureHeader">
 		<div class="header1">
-			<div class="main-page-tittle">
+			<div class="main-page-title">
 				<h1>Futbola <span class="highlight">Parks</span></h1>
+			</div>
+			<div class="header-profile-div">
+				<p sec:authorize="isAuthenticated()"><a th:href="@{/userProfile}">Profile</a></p>
+			</div>
+			<div class="header-authorize-div">
 				<p sec:authorize="isAnonymous()" ><a th:href="@{/home}">Login</a></p>
 				<p sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></p>
-				<p sec:authorize="hasRole('ROLE_USER')"><a th:href="@{/userProfile}">Profile</a></p>
-			</div>
+			</div>		
 		</div>
 		<div class="header2">
 				<nav>
