--- a/src/main/resources/templates/teamdetails.html
+++ b/src/main/resources/templates/teamdetails.html
@@ -19,7 +19,7 @@
 		<div class="team-picture-cont">
 			<img class="" th:src="@{'/img/teams/' + ${team.id} +'.jpg'}" width="100%" height="auto">
 		</div>
-		<div class="team-coach-cont">
+		<div th:if="${coach != null}"  class="team-coach-cont">
 			<div class="team-coach-div">
 				<h3>Coach:</h3>
 					<a th:href="@{/rest/coach/coachDetails/(id=${coach.id})}">
@@ -27,7 +27,7 @@
 					</a>
 				<h4 th:text ="${coach != null} ? ${coach.name}+' '+${coach.surname} : '-'"></h4>
 			</div>
-			<div class="team-coach-div">
+			<div th:if="${assistantCoach != null}" class="team-coach-div">
 				<h3>Assistant Coach:</h3>
 					<a th:href="@{/rest/coach/coachDetails/(id=${assistantCoach.id})}">
 						<img class="" th:src="@{'/img/coaches/' +  ${team.assistantCoachId} +'.jpg'}" width="50%" height="auto">
