--- a/src/main/resources/templates/tournament.html
+++ b/src/main/resources/templates/tournament.html
@@ -46,7 +46,7 @@
 							<a th:text ="${tournament.team.teamName}" th:href ="@{/rest/tournament/tournamentDetails/(tournamentId=${tournament.id})}"></a>
 						</td>
 						<td th:text="${tournament.name}"></td>
-						<td th:text="${tournament.date}"></td>
+						<td th:text="${#dates.format(tournament.date, 'dd-MMM-yyyy')}"></td>
 						<td th:text="${tournament.address}"></td>
 						<td sec:authorize= "hasAnyRole('ROLE_ADMIN', 'ROLE_USER')" class="button-group">
 							<a class="edit-button" th:href="@{/rest/tournament/findById/(id=${tournament.id})}">Edit</a>
@@ -80,11 +80,11 @@
 					<div class="form-div">
 						<label>Name</label>
 						<input type="text"  name="name" required pattern="[a-zA-Z\s]{4,25}" 
-							   title="Name should be 4-25 character long">
+							   title="Name should be 4-25 character long and contain only big and small letters">
 					</div>
 					<div class="form-div">
 						<label>Address</label>
-						<input type="text"  name="address" required pattern="{4,50}" 
+						<input type="text"  name="address" required minlength="4" maxlength="25"
 							   title="Adress should be 4-25 character long">
 					</div>
 					<div class="form-div">
@@ -124,12 +124,12 @@
 					</div>
 					<div class="form-div">
 						<label>Name</label>
-						<input type="text" id="nameEdit"  name="name" required pattern="[a-zA-Z\s]{2,25}" 
-							   title="Name should be 4-25 character long">
+						<input type="text" id="nameEdit"  name="name" required pattern="[a-zA-Z\s]{4,25}" 
+							   title="Name should be 4-25 character long and contain only big and small letters">
 					</div>
 					<div class="form-div">
 						<label>Address</label>
-						<input type="text" id="addressEdit"  name="address" required pattern="{4,50}" 
+						<input type="text" id="addressEdit"  name="address" required minlength="4" maxlength="25"
 							   title="Adress should be 4-25 character long">
 					</div>
 					<div class="form-div">
