--- a/src/main/resources/templates/trainingDetails.html
+++ b/src/main/resources/templates/trainingDetails.html
@@ -32,7 +32,7 @@
 					</tr>
 					<tr>
 						<td>Date:</td>
-						<td th:text="${training.date}"></td>
+						<td th:text="${#dates.format(training.date, 'dd-MMM-yyyy')}"></td>
 					</tr>
 					<tr>
 						<td>Description:</td>
