Added default static file upload configuration, edited user profile image upload path

--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -74,6 +74,7 @@
 			</form>
 		</div>
 		<div class="admin-center1-div">
+			<span class="delete" th:text="${adminError}"></span>
 			<table class="custom-table">
 				<tbody>
 					<tr>
